--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-    text-align: center;
+body {
+    font-family: 'Big Shoulders Display';
+    font-style: normal;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #000000;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    font-weight: 900;
+    line-height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.Container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 120px;
+    margin: 120px 0;
+}
+
+.TopSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 120px;
+    margin: 0 200px;
+}
+
+.LogoContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 18px;
+}
+
+.LogoContainer > h1 {
+    font-size: 24px;
+}
+
+.Logo {
+    max-width: 680px;
+    max-height: 192px;
+}
+
+.Pair {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.Pair > .Label,
+.Value {
+    text-align: center;
+}
+
+.Pair > .Label.Small {
+    font-size: 16px;
+}
+
+.Pair > .Value.Small {
+    font-size: 64px;
+}
+
+.Pair > .Label.Large {
+    font-size: 24px;
+}
+
+.Pair > .Value.Large {
+    font-size: 128px;
+}
+
+.BottomSection {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0;
+    width: 100%;
+}
+
+.BottomRow {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    gap: 0;
+    flex-grow: 1;
+    height: 336px;
+}
+
+.HorizontalLine {
+    background-color: #000000;
+    height: 1px;
+    width: 100%;
+}
+
+.VerticalLine {
+    background-color: #000000;
+    width: 1px;
+    height: 100%;
+}
+
+.BottomBox {
+    background-color: #ffffff;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+    flex-basis: 0;
 }
