--- a/src/App.css
+++ b/src/App.css
@@ -54,46 +54,59 @@ p {
     max-height: 192px;
 }
 
-.Pair {
+.LabelPair {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
-    width: 100%;
-    overflow: hidden;
+    max-width: 100%;
 }
 
-.Pair > .Label,
-.Value {
+.LabelPairLinkContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 0;
+}
+
+.LabelPair .Label,
+.LabelPair .Value {
     max-width: 100%;
+    text-align: center;
     overflow: hidden;
     overflow-wrap: break-word;
 }
 
-.Pair > .Label,
-.Value {
-    text-align: center;
-}
-
-.Pair > .Label.Small,
-.Label.Medium {
+.LabelPair .Label.Small,
+.LabelPair .Label.Medium {
     font-size: 16px;
 }
 
-.Pair > .Value.Small {
+.LabelPair .Value.Small {
     font-size: 40px;
 }
 
-.Pair > .Value.Medium {
+.LabelPair .Value.Medium {
     font-size: 64px;
 }
 
-.Pair > .Label.Large {
+.LabelPair .Label.Large {
     font-size: 24px;
 }
 
-.Pair > .Value.Large {
+.LabelPair .Value.Large {
     font-size: 128px;
+}
+
+.LabelPair a {
+    text-decoration: none;
+    color: #000000;
+    max-width: 100%;
+}
+
+.LabelPair a:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .BottomSection {
@@ -110,19 +123,16 @@ p {
     align-items: stretch;
     gap: 0;
     flex-grow: 1;
-    height: 336px;
 }
 
 .HorizontalLine {
     background-color: #000000;
     height: 1px;
-    width: 100%;
 }
 
-.VerticalLine {
+.BoxSeparator {
     background-color: #000000;
     width: 1px;
-    height: 100%;
 }
 
 .BottomBox {
@@ -132,5 +142,21 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: calc(50vw - 1px);
+    width: calc(50vw - 0.5px);
+    height: 336px;
+}
+
+@media screen and (max-width: 800px) {
+    .BottomRow {
+        flex-direction: column;
+    }
+
+    .BottomBox {
+        width: 100%;
+    }
+
+    .BoxSeparator {
+        height: 1px;
+        width: unset;
+    }
 }
